
Tooling
* detect maximum possible segment size on file system (e.g. FAT)

smraw.net
* implement other functions ?
* in examples print exception/backtrace on error

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add glob test to msvscpp project

20130405
* updated dependencies

20130404
* textual changes
* updated dependencies

20130403
* changes due to libmfdata and libfdata merge

20130402
* changes due to libmfdata and libfdata merge
* removed libsmraw_legacy

20130401
* updated dependencies
* changes due to libmfdata and libfdata merge

20130321
* 2013 update
* updated dependencies
* changes due to libmfdata and libfdata merge

20121216
* changes due to libmfdata and libfdata merge

20121201
* updated dependencies
* changes due to libmfcache and libfcache merge
* changes due to libmfdata and libfdata merge

20120923
* updated dependencies
* updates msvscpp files

20120712
* updated dependencies

20120701
* updated dependencies
* libcsplit update

20120630
* updated dependencies

20120519
* updated dependencies
* disabled borland codegear files
* added smrawmount destroy

20120212
* small changes

20120209
* added dpkg files
* updated libnotify, libbfio, libfvalue

20120102
* 2012 update

20111231
* updated libhmac
* updated msvscpp and codegear files

20111229
* updated libcstring, libuna, libbfio

20111224
* update libcstring, libsystem, libuna, libfvalue, libhmac
* updated pc file

20111113
* updated libcstring, libsystem, libuna, libbfio, libbfio, libfvalue, libhmac
* made smrawmount a bit more flexible for filenames not supported by glob function

20111030
* updated configure.as and m4 files
* updated libhmac
* added glob support for .img and .dmg
* code clean up in glob function

20111020
* updated README.static
* updated libfvalues

20111013
* fixes for libfuse detection
* added support for OSXFuse
* fix for static executables on Cygwin
* updated libfvalue

20111009